<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="ibrahim_emmanuel_success">Ibrahim Emmanuel Success</string>
    <string name="track">Track:</string>
    <string name="country">Country:</string>
    <string name="android">Android</string>
    <string name="nigeria">Nigeria</string>
    <string name="email">Email:</string>
    <string name="email_text">successemmanuel12@gmail.com</string>
    <string name="phone_number">Phone:</string>
    <string name="slack_username">Slack:</string>
    <string name="slack_name">\@successemmanuel12</string>
    <string name="phone">+2348116411353</string>
    <string name="profile_image">profile Image</string>
    <string name="lost_connection">Oops Network Connection Failed..\\n please check Connection and try again..</string>
</resources>
